--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,28 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Header from '../components/Header.astro';
+import Hero from '../components/Hero.astro';
+import About from '../components/About.astro';
+import Events from '../components/Events.astro';
+import Gallery from '../components/Gallery.astro';
+import Committee from '../components/Committee.astro';
+import Membership from '../components/Membership.astro';
+import Contact from '../components/Contact.astro';
+import Faq from '../components/Faq.astro';
+import Footer from '../components/Footer.astro';
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="Home" description="IEEE Computer Society at Pandit Deendayal Energy University - Where innovation meets community.">
+	<Header />
+	<main>
+		<Hero />
+		<About />
+		<Events />
+		<Gallery />
+		<Committee />
+		<Membership />
+		<Contact />
+		<Faq />
+	</main>
+	<Footer />
 </Layout>
