update package.json, pnpm-lock.yaml, Contact.astro and Hero.astro

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import '@fontsource/inter';
 ---
 
 <section class="hero">
@@ -20,10 +21,10 @@ import "../styles/global.css";
     .hero {
         height: 90vh;
         /* height: 90vh; */
-        /* background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/images/ieee-background.jpg');
-        background-size: cover; */
+         background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/images/ieee-background.jpg');
+        background-size: cover;
         background-position: center;
-        /* color: white; */
+        color: white;
         display: flex;
         align-items: center;
     }
@@ -69,7 +70,7 @@ import "../styles/global.css";
 
     .secondary-button {
         /* background-color: transparent; */
-        /* color: white; */
+        color: white;
         /* border: 2px solid white; */
         padding: 0.8rem 2rem;
         border-radius: 5px;
