build(deps): update package-lock.json, package.json, Contact.astro and Hero.astro

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -68,7 +68,7 @@
       </div>
 
       <hr class="text-zinc-400" />
-      <div class="contact-form">
+      <div class="contact-form bg-white">
         <form>
           <div class="form-group">
             <label for="name" class="form-label">Your Name</label>
