--- a/src/components/temp.html
+++ b/src/components/temp.html
@@ -1147,7 +1147,7 @@
                     <div class="member-info">
                         <h3 class="member-name">Sharmishtha Kola</h3>
                         <div class="member-role">GD Head</div>
-                        <div class="social-links">
+                        <div class="social-links"><i class="fa fa-whatsapp" aria-hidden="true"></i>
                             <a href="#" class="social-link">
                                 <i class="fab fa-linkedin"></i>
                             </a>
