delete 24 files and update 5 files

--- a/src/components/Events.astro
+++ b/src/components/Events.astro
@@ -12,21 +12,21 @@ const events: Event[] = [
         date: "January 07, 2025",
         title: "IoT Workshop",
         description: "A hands-on 5 Days workshop introducing the fundamentals of IoT & AI ML, including device connectivity, data processing, and real-world applications.",
-        image: "../assets/images/events/iot_workshop/iot_workshop.jpg",
+        image: "/events/iot.png",
         link: "https://drive.google.com/drive/folders/1Du40iu1YxLw5sTK4ltXJYIOKEW82BVY2"
     },
     {
         date: "October 18, 2024",
         title: "CP Expert Talk",
         description: "An insightful session on Competitive Programming and DSA by PDEU's alumnus Vinay K, currently a Software Engineer III at Google.",
-        image: "../assets/images/events/dsa_allumni_session/dsa_allumni_session.jpg",
+        image: "/events/dsa.png",
         link: "#"
     },
     {
         date: "October 17, 2024",
         title: "GenAI Session",
         description: "An insightful discussion with industry experts about emerging trends and the future landscape of computing.",
-        image: "../assets/images/events/genAI_Workshop/genAI_workshop.jpg",
+        image: "/events/genai.png",
         link: "#"
     },
     {
@@ -40,7 +40,7 @@ const events: Event[] = [
         date: "August 2, 2024",
         title: "Kernel & Commit",
         description: "An interactive session on the Linux kernel and Version Control Systems like Git & GitHub and its development process, featuring hands-on exercises.",
-        image: "../assets/images/events/gitHub_workshop/github_workshop.jpg",
+        image: "/events/git.png",
         link: "#"
     }
 ];
