--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -12,7 +12,7 @@
                 <img src="../assets/images/ieee_comittee.jpg" alt="IEEE CS PDEU Team">
             </div>
             <div class="about-content">
-                <h3>Who We Are</h3>
+                <h3>Who Are We?</h3>
                 <p>The IEEE Computer Society, Student Chapter at PDEU is a vibrant community dedicated to advancing
                     technology and computing knowledge. As part of the world's leading organization for computer
                     science and technology, we provide a platform for students to enhance their technical skills,
