delete 13 files and update 26 files

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -12,7 +12,7 @@
 
     <div class="about-grid">
       <div class="about-image">
-        <img src="committee.jpg" alt="IEEE CS PDEU Team" />
+        <img src="committee.webp" alt="IEEE CS PDEU Team" />
       </div>
       <div class="about-content">
         <h3>Who Are We?</h3>
