--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ const currentYear = new Date().getFullYear();
     <div class="footer-content">
       <div class="footer-about">
         <div class="footer-logo">
-          <img src="logo.png" alt="IEEE CS PDEU Logo" />
+          <img src="logo.webp" alt="IEEE CS PDEU Logo" />
           <div class="footer-logo-text">IEEE CS<br />PDEU</div>
         </div>
         <p>
