--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@
   <div class="container">
     <div class="navbar">
       <div class="logo">
-        <img src="logo.png" alt="IEEE CS PDEU Logo" />
+        <img src="logo.webp" alt="IEEE CS PDEU Logo" />
       </div>
       <div class="nav-links">
         <a href="#about">About Us</a>
